# TrellisTicTacToe

./: .gitignore  CMakeLists.txt  LISCENSE.md  README.md
TrellisTicTacToe.X/: bluetrellis_main.c  libbluetrellis.c  libi2c.c  libi2c.h  liblcd.c  liblcd.h  libtrellis.c  libtrellis.h  libuart.c  libuart.h  libuarttrellis.c  libuarttrellis.h  utills.c  utills.h
TrellisTicTacToe.X/nbproject/: configurations.xml  project.xml
TrellisTicTacToe.X/pic/: t4_main.c
TrellisTicTacToe.X/pic/nbproject/: configurations.xml
TrellisTicTacToe.X/pic/nbproject/private/: private.xml
TrellisTicTacToe.X/queuelogs/: debugtool.txt
include/: blue_trellis.h  calculator.h  dummy_animation.h  mole_whacker.h  scene.h  scene_selector.h  tictactoe.h
nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
src/blue_trellis/: blue_trellis.c  blue_trellis.cpp
src/bluetooth-serial-port/: .gitignore
src/bluetooth_serial/: PROTOCOL.md  bluetooth_serial.cpp  configure_hc.sh
src/trellis_game/: calculator.cpp  dummy_animation.cpp  mole_whacker.cpp  scene.cpp  tictactoe.cpp  trellis_game.cpp  trellis_main.cpp  trellis_test.cpp
utils/: hc-06-conf.py
